--- a/.github/workflows/build-runtime.yaml
+++ b/.github/workflows/build-runtime.yaml
@@ -12,12 +12,12 @@ jobs:
       contents: write
     strategy:
       matrix:
-        chain: ["trappist", "stout"]
+        runtime: ["trappist", "stout"]
     steps:
       - name: Checkout sources
         uses: actions/checkout@v3
 
-      - name: Cache target dir
+      - name: Cache runtime target dir
         uses: actions/cache@v3
         with:
           path: "${{ github.workspace }}/runtime/${{ matrix.runtime }}/target"
@@ -30,13 +30,13 @@ jobs:
         id: srtool_build
         uses: chevdor/srtool-actions@v0.7.0
         with:
-          chain: ${{ matrix.chain }}
+          chain: ${{ matrix.runtime }}
 
       - name: Summary
         run: |
           echo Summary:
-          echo '${{ steps.srtool_build.outputs.json }}' | jq . > ${{ matrix.chain }}-srtool-digest.json
-          cat ${{ matrix.chain }}-srtool-digest.json
+          echo '${{ steps.srtool_build.outputs.json }}' | jq . > ${{ matrix.runtime }}-srtool-digest.json
+          cat ${{ matrix.runtime }}-srtool-digest.json
           cp `dirname ${{ steps.srtool_build.outputs.wasm }}`/*.wasm ./
 
       # Manual trigger: add artifacts to run
@@ -44,35 +44,38 @@ jobs:
         if: ${{ github.event_name != 'release' }}
         uses: actions/upload-artifact@v3
         with:
-          name: ${{ matrix.chain }}-runtime-${{ github.sha }}
+          name: ${{ matrix.runtime }}-runtime-${{ github.sha }}
           path: |
-            ${{ matrix.chain }}*.wasm
-            ${{ matrix.chain }}-srtool-digest.json
+            ${{ matrix.runtime }}*.wasm
+            ${{ matrix.runtime }}-srtool-digest.json
 
       # Release published: add artifacts to release
-      - name: Generate info to append to release notes
-        run: |
-          echo 
-            "\n## Runtime: `${{ matrix.chain }}`\n"
-            "```\n"
-            "🏋️ Runtime Size:           $(jq .runtimes.compressed.subwasm.size ${{ matrix.chain }}-srtool-digest.json) bytes"
-            "```\n" > release.md
-          echo release.md
       - name: Add artifacts to release
         if: ${{ github.event_name == 'release' }}
         uses: softprops/action-gh-release@v1
         with:
-          body_path: release.md
+          body: |
+            ## Runtime: `${{ matrix.runtime }}`
+            ```
+            🏋️ Runtime Size:           ${{ steps.srtool_build.outputs.json.runtimes.compressed.subwasm.size }} bytes
+            ```
           append_body: true
           files: |
-            ${{ matrix.chain }}-runtime.compact.compressed.wasm
-            ${{ matrix.chain }}-srtool-digest.json
+            ${{ matrix.runtime }}-runtime.compact.compressed.wasm
+            ${{ matrix.runtime }}-srtool-digest.json
+            
 
-
-#            "🔥 Core Version:           kusama-9430 (parity-kusama-0.tx23.au2)
-#            "🗜 Compressed:             Yes: 79.34%
-#            "🎁 Metadata version:       V14
-#            "🗳️ system.setCode hash:    0x2802de8755ceb5138f229dd46fbd8165422bae31b000d0f0a06931d383b203f5
-#            "🗳️ authorizeUpgrade hash:  0x168a65b168221d7ff899b24b79304286b1f768b89c7ace07ec85405b1d55c6e5
-#            "🗳️ Blake2-256 hash:        0x67999f8cc63634bee01b20e0266c5fc28b79647310024cc534bdc3318a76e17a
-#            "📦 IPFS:                   QmQPJEeS3BoWCvzX66AL5vKinaXsKd2hRAtyejzE7KH2XX
+#      - name: Generate info to append to release notes
+#        run: |
+#          echo
+#            "\n## Runtime: `${{ matrix.runtime }}`\n"
+#            "```\n"
+#            "🏋️ Runtime Size:           $(jq .runtimes.compressed.subwasm.size ${{ matrix.runtime }}-srtool-digest.json) bytes"
+#            "🔥 Core Version:           $(jq .runtimes.compressed.subwasm.core_version.specName ${{ matrix.runtime }}-srtool-digest.json)-$(jq .runtimes.compressed.subwasm.core_version.specVersion ${{ matrix.runtime }}-srtool-digest.json)"
+#            "🎁 Metadata version:       V$(jq .runtimes.compressed.subwasm.metadata_version ${{ matrix.runtime }}-srtool-digest.json)"
+#            "🗳️ system.setCode hash:    $(jq .runtimes.compressed.subwasm.proposal_hash ${{ matrix.runtime }}-srtool-digest.json)"
+#            "🗳️ authorizeUpgrade hash:  $(jq .runtimes.compressed.subwasm.parachain_authorize_upgrade_hash ${{ matrix.runtime }}-srtool-digest.json)"
+#            "🗳️ Blake2-256 hash:        $(jq .runtimes.compressed.subwasm.blake2_256 ${{ matrix.runtime }}-srtool-digest.json)"
+#            "📦 IPFS:                   $(jq .runtimes.compressed.subwasm.ipfs_hash ${{ matrix.runtime }}-srtool-digest.json)"
+#            "```\n" > release.md
+#          echo release.md
